--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -720,6 +720,8 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -727,6 +729,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -737,6 +741,8 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -745,7 +751,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
+          <div class="blankHS"></div>
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -756,6 +762,8 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -780,6 +788,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -801,7 +811,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
+          <div class="blankHS"></div>
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -812,6 +822,8 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -828,6 +840,7 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
 
         </div>
       </section>
@@ -855,6 +868,8 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
@@ -862,6 +877,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -871,7 +888,11 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
           <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="Grid Grid--gutters Grid--cols-2">
 
             <div class="Grid-cell">
@@ -1862,90 +1883,45 @@
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
-              <h2 class="tArrow"> Cards <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              <h2 class="tArrow"> Cards - clean <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
               </h2>
             </div>
           </div>
           <!-- Arrow -->
-
           <div class="blankHXS"></div>
-          <div class="element">
-            <h3 class="accordion accordionBorderTop noMargin"><strong>Clean</strong> </h3>
-            <div class="accordion-content">
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <div class="Grid Grid--gutters Grid--cols-2">
-                    <div class="Grid-cell">
-                      <div class="element">
-                        <div class="elementInner cardBorder">
-                          <h4> <strong> Title</strong> </h4>
-                          <ul>
-                            <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                              incididunt
-                              ut labore
-                              et dolore magna aliqua. </li>
-                            <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                              incididunt
-                              ut labore
-                              et dolore magna aliqua. </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="Grid-cell">
-                      <div class="element">
-                        <div class="elementInner cardBorder">
-                          <h4> <strong> Title</strong> </h4>
-                          <ul>
-                            <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                              incididunt
-                              ut labore
-                              et
-                              dolore magna aliqua. </li>
-                            <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                              incididunt
-                              ut labore
-                              et
-                              dolore magna aliqua. </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="blankHXS"></div>
-            </div>
-            <h3 class="accordion noMargin"><strong>Border</strong> </h3>
-            <div class="accordion-content">
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
               <div class="Grid Grid--gutters Grid--cols-2">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInnerL cardAPPOINTA">
+                    <div class="elementInner cardBorder">
                       <h4> <strong> Title</strong> </h4>
                       <ul>
-                        <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                          incididunt
                           ut labore
-                          et
-                          dolore magna aliqua. </li>
-                        <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          et dolore magna aliqua. </li>
+                        <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                          incididunt
                           ut labore
-                          et
-                          dolore magna aliqua. </li>
+                          et dolore magna aliqua. </li>
                       </ul>
                     </div>
                   </div>
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInnerL cardAPPOINTA">
+                    <div class="elementInner cardBorder">
                       <h4> <strong> Title</strong> </h4>
                       <ul>
-                        <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                          incididunt
                           ut labore
                           et
                           dolore magna aliqua. </li>
-                        <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                          incididunt
                           ut labore
                           et
                           dolore magna aliqua. </li>
@@ -1954,55 +1930,101 @@
                   </div>
                 </div>
               </div>
-              <div class="blankHXS"></div>
-            </div>
-            <h3 class="accordion accordionBorderBottom noMargin"><strong>Gradient</strong> </h3>
-            <div class="accordion-content">
-              <div class="blankHXS"></div>
-              <div class="Grid Grid--gutters Grid--cols-3">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="elementDemoCard">
-                      <div class="elementInnerDemoCard heightS">
-                        <h4> <strong> Title </strong> </h4>
-                        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                          labore
-                          et
-                          dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="elementDemoCard">
-                      <div class="elementInnerDemoCard heightS">
-                        <h4> <strong> Title </strong> </h4>
-                        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                          labore
-                          et
-                          dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="elementDemoCard">
-                      <div class="elementInnerDemoCard heightS">
-                        <h4> <strong> Title </strong> </h4>
-                        <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                          labore et dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies.
-                        </h5>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-              <div class="blankHXS"></div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow"> Cards - Border <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInnerL cardAPPOINTA">
+                  <h4> <strong> Title</strong> </h4>
+                  <ul>
+                    <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                      ut labore et dolore magna aliqua. </li>
+                    <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                      ut labore et dolore magna aliqua. </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementInnerL cardAPPOINTA">
+                  <h4> <strong> Title</strong> </h4>
+                  <ul>
+                    <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                      ut labore et dolore magna aliqua. </li>
+                    <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                      ut labore et dolore magna aliqua. </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blankHS"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow"> Cards - Gradient <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--gutters Grid--cols-3">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementDemoCard">
+                  <div class="elementInnerDemoCard heightS">
+                    <h4> <strong> Title </strong> </h4>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore
+                      et
+                      dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementDemoCard">
+                  <div class="elementInnerDemoCard heightS">
+                    <h4> <strong> Title </strong> </h4>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore
+                      et
+                      dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="elementDemoCard">
+                  <div class="elementInnerDemoCard heightS">
+                    <h4> <strong> Title </strong> </h4>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies.
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="blankHXS"></div>
         </div>
         <div class="blankHXS"></div>
 
@@ -2022,7 +2044,8 @@
         <!-- Arrow -->
         <div class="wrapper">
           <div class="element">
-            <h2 class="tArrow">Accordion <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+            <h2 class="tArrow">Accordion without background <img class="seArrow" src="../icon/arrow-se.svg"
+                alt="icon arrow">
             </h2>
           </div>
         </div>
@@ -2030,7 +2053,6 @@
         <div class="blankHXS"></div>
 
         <div class="wrapper">
-
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin "><strong>Title</strong> </h3>
             <div class="accordion-content">
@@ -2061,6 +2083,17 @@
             </div>
           </div>
         </div>
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="element">
+            <h2 class="tArrow">Accordion with background <img class="seArrow" src="../icon/arrow-se.svg"
+                alt="icon arrow">
+            </h2>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHXS"></div>
+
         <div class="GreyBg100">
           <div class="blankHXS"></div>
 
