--- a/application_info/index.html
+++ b/application_info/index.html
@@ -237,13 +237,53 @@
       </div>
     </div>
     <!-- Arrow -->
+
     <div class="blankHXS"></div>
+
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <button class="Clipboard" contenteditable="true">As a UX designer with a diverse range of skills and experience in
-            startup environments, and fully involved in every aspect of the design process. I enjoy learning new technologies
-            and finding ways to use them to create better design solutions and boost productivity.</button>          </h2>
+          <div class="ClipboardBox">
+            <button class="Clipboard" contenteditable="true">
+              <p> Dear Hiring Manager, </p>
+              <p>My name is Vicky, I’m a UX designer with a background in architecture, currently designing for business
+                and consumer-facing websites with a small team [https://vickywang.me/worksamples/xiaobaoii]</p>
+              <p> At BYP, I am currently leading the design of all major features and flows. This includes building
+                support for appointment booking, team management, service management, promotions, and more. I work
+                closely with engineering and management on all phases of the design process.
+                Before I join my current company, I built and updated my website [https://vickywang.me] myself from
+                scratch by using HTML/CSS/JS, and deployed it on AWS.</p>
+              <p>
+                I am very interested in transforming the physical flow into digital screens, from the customer journey
+                to the information architecture to the real site map. I enjoy structuring requirements and delivering a
+                simple and scalable product.
+                Looking forward to hearing from you.</p>
+              <p> Thanks,</p>
+              <p>Vicky</p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ClipboardBox">
+            <button class="Clipboard" contenteditable="true">
+              <strong> <p>Resume</p> </strong>
+              <strong>
+                <p>Portfolio</p>
+              </strong>
+
+              <strong>
+                <p>Work samples </p>
+              </strong>
+
+
+
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -251,26 +291,6 @@
 
 
 
-
-    <div class="element">
-
-      <pre>
-        <div class="codeTiltle">Introduction</div>
-        <code> 
-          Dear Hiring Manager,
-
-          My name is Vicky, I’m a UX designer with a background in architecture, currently designing for business and consumer-facing websites with a small team [https://vickywang.me/worksamples/xiaobaoii]
-          At BYP, I am currently leading the design of all major features and flows. This includes building support for appointment booking, team management, service management, promotions, and more. I work closely with engineering and management on all phases of the design process.
-          Before I join my current company, I built and updated my website [https://vickywang.me] myself from scratch by using HTML/CSS/JS, and deployed it on AWS.
-          
-          I am very interested in transforming the physical flow into digital screens, from the customer journey to the information architecture to the real site map. I enjoy structuring requirements and delivering a simple and scalable product.
-          Looking forward to hearing from you.
-          
-          Thanks,
-          Vicky
-        </code>
-      </pre>
-    </div>
 
     <div class="blankHS"></div>
 
