--- a/application_info/index.html
+++ b/application_info/index.html
@@ -177,11 +177,11 @@
                   </div>
                 </div>
               </a>
-              <a href="/navigation/">
+              <a href="/design_system/">
                 <div class="cardBorder ">
                   <img src="../image/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
-                    <h6 class="colorBlack">Navigation Design | vickywang.me</h6>
+                    <h6 class="colorBlack">Design System| vickywang.me</h6>
                   </div>
                 </div>
               </a>
@@ -265,28 +265,59 @@
         </div>
       </div>
     </div>
+    <div class="blankHS"></div>
 
+    <!-- Arrow -->
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> Resume and Work Samples <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
+      </div>
+    </div>
+    <!-- Arrow -->
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
           <div class="ClipboardBox">
             <button class="Clipboard" contenteditable="true">
-              <strong> <p>Resume</p> </strong>
-              <strong>
-                <p>Portfolio</p>
-              </strong>
-
-              <strong>
-                <p>Work samples </p>
-              </strong>
-
-
-
+              <p>Below are my resume and work samples:</p>
+              <p>Resume: https://vickywang.me/resumeWS.pdf</p>
+              <p>Portfolio: https://vickywang.me/ </p>
+              <p>Work samples: https://vickywang.me/worksamples/xiaobaobeeii/</p>
             </button>
           </div>
         </div>
       </div>
     </div>
+    <div class="blankHS"></div>
+
+    <!-- Arrow -->
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> Social network <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
+      </div>
+    </div>
+    <!-- Arrow -->
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ClipboardBox">
+            <button class="Clipboard" contenteditable="true">
+              <p>Below are my social network links:</p>
+              <p>LinkedIn:https://www.linkedin.com/in/vicky-wyq/ </p>
+              <p>Github: https://github.com/vicky-wyq </p>
+              <p>CodePen: https://codepen.io/vicky-wyq</p>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
 
