--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -2521,21 +2521,26 @@
         <!-- Arrow -->
         <div class="wrapper">
           <div class="element">
-            <h2 class="tArrow">Modal with Background Color <img class="seArrow" src="../icon/arrow-se.svg"
+            <h2 class="tArrow">Modal - Background Color: Others <img class="seArrow" src="../icon/arrow-se.svg"
                 alt="icon arrow">
             </h2>
           </div>
         </div>
         <!-- Arrow -->
 
+
+        <div class="wrapper">
+          <div class="Grid-cell">
+          </div>
+        </div>
+        
         <div class="BgSkylineBlueLter">
           <div class="blankHXS"></div>
           <div class="wrapper">
             <div class="Grid-cell">
-              <img class="modal-target" src="../Placeholder.svg" alt="Overall flow">
+              <img src="../Placeholder.svg" alt="Background Color: Others" class="modal-target" data-bgcolor="rgba(230, 246, 246, 0.96)">
             </div>
           </div>
-
           <div class="blankHXS"></div>
         </div>
 
@@ -2543,8 +2548,7 @@
         <!-- Arrow -->
         <div class="wrapper">
           <div class="element">
-            <h2 class="tArrow">Modal without Background Color <img class="seArrow" src="../icon/arrow-se.svg"
-                alt="icon arrow">
+            <h2 class="tArrow">Modal - Background Color: White <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
             </h2>
           </div>
         </div>
@@ -2553,9 +2557,7 @@
         <div class="Grid Grid--full u-textCenter wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <div class="Grid">
-                <img class="modal-target" src="../PlaceholderDark.svg" alt="Overall flow">
-              </div>
+              <img src="../Placeholder.svg" alt="Background Color: White" class="modal-target" data-bgcolor="rgba(255, 255, 255, 0.96)">
             </div>
           </div>
         </div>
@@ -2591,11 +2593,7 @@
 
 
 
-
-
   <!-- The Modal -->
-
-
   <div id="modal" class="modal">
     <span id="modal-close" class="modal-close">
       <img class="iconXforModal" src="../icon/delete.svg" alt="&times;">
@@ -2604,6 +2602,8 @@
     <div id="modal-caption" class="modal-caption"></div>
   </div>
   <!-- The Modal -->
+
+
   <!--back to top-->
   <button id="myBtn" title="Back to top">
     <div id="dad">
