--- a/application_info/index.html
+++ b/application_info/index.html
@@ -210,15 +210,32 @@
 
 
   <div class="blankHM"></div>
-
-
-
-
-
-
-
-
   <div class="wrapper">
+
+    <div class="Grid Grid--gutters Grid--cols-3">
+
+      <div class="blankHL"></div>
+
+
+      <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
+        <img class="intro-logo" src="../icon/in.svg" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
+        <img class="intro-logo" src="../icon/git.svg" alt="GitHub">
+      </a>
+      <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
+        <img class="intro-logo" src="../icon/Codepen.svg" alt="CodePen">
+      </a>
+      <a href="https://www.instagram.com/vw_yiqi/" target="_blank" title="Instagram">
+        <img class="intro-logo" src="../icon/ins.svg" alt="Instagram">
+      </a>
+    </div>
+
+
+
+
+
+
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
@@ -226,7 +243,19 @@
         </div>
       </div>
     </div>
-    <div class="blankHXS"></div>
+    <div class="element">
+
+      <div class="ClipboardBox iconOnly">
+        <button class="Clipboard iconOnly" contenteditable="true">
+          <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
+          <p class="copyText">https://www.linkedin.com/in/vicky-wyq/</p>
+        </button>
+      </div>
+
+    </div>
+
+    <div class="blankHL"></div>
+
     <!-- Arrow -->
     <div class="Grid Grid--full">
       <div class="Grid-cell">
@@ -243,8 +272,8 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <div class="ClipboardBox">
-            <button class="Clipboard" contenteditable="true">
+          <div class="ClipboardBox clickTxt">
+            <button class="Clipboard clickTxt" contenteditable="true">
               <p> Dear Hiring Manager, </p>
               <p>My name is Vicky, I’m a UX designer with a background in architecture, currently designing for business
                 and consumer-facing websites with a small team [https://vickywang.me/worksamples/xiaobaoii]</p>
@@ -280,8 +309,8 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <div class="ClipboardBox">
-            <button class="Clipboard" contenteditable="true">
+          <div class="ClipboardBox clickTxt">
+            <button class="Clipboard clickTxt" contenteditable="true">
               <p>Below are my resume and work samples:</p>
               <p>Resume: https://vickywang.me/resumeWS.pdf</p>
               <p>Portfolio: https://vickywang.me/ </p>
@@ -306,8 +335,8 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <div class="ClipboardBox">
-            <button class="Clipboard" contenteditable="true">
+          <div class="ClipboardBox clickTxt">
+            <button class="Clipboard clickTxt" contenteditable="true">
               <p>Below are my social network links:</p>
               <p>LinkedIn:https://www.linkedin.com/in/vicky-wyq/ </p>
               <p>Github: https://github.com/vicky-wyq </p>
