--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -624,13 +624,16 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS BgWarm  shadowBox">
+                <div class="blockS BgWarm shadowBox">
                   <div>Sandy</div>
                   <div>HEX:fcf5eb</div>
                 </div>
               </div>
             </div>
 
+
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
                 <div class="blockS BgAlet shadowBox">
@@ -639,6 +642,41 @@
                 </div>
               </div>
             </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blockS BgAletLt shadowBox">
+                  <div>Alert light</div>
+                  <div>HEX:292929</div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blockS BgSuccess  shadowBox">
+                  <div>Success</div>
+                  <div>HEX:fcf5eb</div>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blockS BgSuccessLt  shadowBox">
+                  <div>Success light</div>
+                  <div>HEX:fcf5eb</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="Grid-cell">
+              <div class="element displayNone">
+                <div class="blockS BgWarm  shadowBox">
+                  <div>Sandy</div>
+                  <div>HEX:fcf5eb</div>
+                </div>
+              </div>
+            </div>
+
+
 
           </div>
           <!-- Color -->
@@ -894,7 +932,7 @@
           <!-- Arrow -->
           <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters Grid--cols-2">
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
 
             <div class="Grid-cell">
               <div class="element">
@@ -1688,7 +1726,7 @@
 
         <div class="wrapper">
 
-          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+          <div class="Grid Grid--gutters Grid--cols-3 Grid--center">
             <div class="Grid-cell">
               <div class="element">
                 <a> <button class="buttonLanding">Button
@@ -1700,8 +1738,15 @@
                 <a> <button class="button-35 DS">Button</button></a>
               </div>
             </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <a> <button class="small">Button</button></a>
+              </div>
+            </div>
           </div>
-          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+
+
+          <div class="Grid Grid--gutters Grid--cols-3 Grid--center">
             <div class="Grid-cell">
               <div class="element">
                 <a href="/about"> <button class="buttonLanding arrButton">Button &nbsp;
@@ -2408,7 +2453,8 @@
           </pre>
           </div>
         </div>
-        <div class="blankHM"></div>        <!-- Arrow -->
+        <div class="blankHM"></div>
+        <!-- Arrow -->
         <div class="wrapper">
           <div class="element">
             <h2 class="tArrow">Horizontal Layout Slideshows with Background <img class="seArrow"
@@ -2455,6 +2501,7 @@
           </div>
           <div class="blankHXS"></div>
         </div>
+        <div class="blankHS"></div>
 
         <div class="wrapper">
           <div class="element">
