--- a/application_info/index.html
+++ b/application_info/index.html
@@ -233,6 +233,31 @@
 
 
 
+    <div class="containerCopy element">
+      <div class="ClickandCopy">LinkedIn</div>
+      <div class="copy-text">
+        <input type="text" class="text" value="https://www.linkedin.com/in/vicky-wyq/" />
+        <button class="centerHorz"> <img class="iconXS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+
+
+    <div class="blankHS"></div>
+    <div class="containerCopy element">
+      <div class="ClickandCopy">Website</div>
+
+      <div class="copy-text">
+        <input type="text" class="text" value="https://vickywang.me/" />
+
+        <button class="centerHorz"> <img class="iconXS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+
+
+
+
 
 
 
@@ -244,16 +269,21 @@
       </div>
     </div>
     <div class="element">
-
-      <div class="ClipboardBox iconOnly">
-        <button class="Clipboard iconOnly" contenteditable="true">
+      <div class="ClipboardBoxIconOnly">
+        <button class="ClipboardIconOnly" contenteditable="true">
           <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
-          <p class="copyText">https://www.linkedin.com/in/vicky-wyq/</p>
+          <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
         </button>
       </div>
-
     </div>
-
+    <div class="element">
+      <div class="ClipboardBoxIconOnly">
+        <button class="ClipboardIconOnly" contenteditable="true">
+          <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
+          <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+        </button>
+      </div>
+    </div>
     <div class="blankHL"></div>
 
     <!-- Arrow -->
