--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1810,6 +1810,48 @@
               </div>
             </div>
           </div>
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+            <div class="Grid-cell">
+              <div class="element">
+                <a><img class="intro-logo" src="../icon/arrow-accordion-down.svg" alt="linkedIn" title="linkedIn"></a>
+                <a><img class="intro-logo" src="../icon/arrow-accordion-up.svg" alt="GitHub" title="GitHub"></a>
+                <a><img class="intro-logo" src="../icon/arrow-back.svg" alt="CodePen" title="CodePen"></a>
+                <a> <img class="intro-logo" src="../icon/arrow-forward.svg" alt="Instagram" title="Instagram"></a>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <a><img class="intro-logo" src="../icon/arrow-accordion-down.svg" alt="linkedIn" title="linkedIn"></a>
+                <a><img class="intro-logo" src="../icon/arrow-accordion-up.svg" alt="GitHub" title="GitHub"></a>
+                <a><img class="intro-logo" src="../icon/arrow-back.svg" alt="CodePen" title="CodePen"></a>
+                <a> <img class="intro-logo" src="../icon/arrow-forward.svg" alt="Instagram" title="Instagram"></a>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <a><img class="iconDemo" src="../icon/arrow-ne.svg" alt="Arrow" title="icon"></a>
+                <a><img class="iconDemo" src="../icon/arrow-se.svg" alt="Arrow" title="icon"></a>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <a><img class="iconDemo" src="../icon/icon_Iteration.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconDemo" src="../icon/icon_Redesign.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconDemo" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
+
+                <a><img class="iconDemo" src="../icon/icon_Final.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconDemo" src="../icon/icon_Testing.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconDemo" src="../icon/library.svg" alt="Icon" title="Icon"></a>
+                <a><img class="iconDemo" src="../icon/layout.svg" alt="Layout" title="Icon"></a>
+                <a><img class="iconDemo" src="../icon/icon_promotion.svg" alt="Icon" title="Icon"></a>
+
+              </div>
+            </div>
+          </div>
           <div class="element">
             <pre>
               <div class="codeTiltle">HTML</div>
@@ -2248,6 +2290,56 @@
                 &lt;/div&gt;
               </code>
             </pre>
+          </div>
+          <div class="blankHM"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Card - with Link <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="">
+                    <div class="elementCard float cardBorder shadowBoxLt">
+                      <img src="../Placeholder.svg" alt="Placeholder">
+                      <div class="element">
+                        <div class="element">
+                          <h5>Lorem ipsum dolor sit amet</h5>
+                          <h3 class="arrCard" data-aos="fade-up"><strong>Lorem ipsum</strong></h3>
+                          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus
+                            commodo.</h4>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementCard float cardBorder shadowBoxLt">
+                    <img src="../Placeholder.svg" alt="Placeholder">
+                    <div class="element">
+                      <div class="element">
+                        <h5>Lorem ipsum dolor sit amet</h5>
+                        <h3 class="arrCard" data-aos="fade-up"><strong>Lorem ipsum</strong></h3>
+                        <!--Analysis Report-->
+                        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                          labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo.
+                        </h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="blankHM"></div>
@@ -2877,6 +2969,8 @@
             </div>
           </div>
         </div>
+        <div class="blankHM"></div>
+
         <!-- Arrow -->
         <div class="wrapper">
           <div class="element">
